기흔 : 정책알고리즘 진행중